--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Leading financial services company empowering businesses with innovative solutions, digital finance training, and excellent customer service." />
     <meta name="author" content="COOPEC IKIRENGA" />
 
-    <meta property="og:title" content="COOPEC IKIRENGA - Excellence in Financial Services" />
+    <meta property="og:title" content="COOPEC IKIRENGA - Iterambere kuri bose!!" />
     <meta property="og:description" content="Leading financial services company empowering businesses with innovative solutions" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
